Fix layout overflow bug

--- a/frontend/src/assets/scss/layout.scss
+++ b/frontend/src/assets/scss/layout.scss
@@ -98,7 +98,7 @@ A {
 }
 
 .card-body {
-  overflow: visible;
+  overflow: visible !important;
   padding-bottom: 0px;
 }
 
